--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,24 @@
+### Maven ###
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+
+### Gradle ###
+.gradle/
+build/
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+.idea/
 *.iws
 *.iml
 *.ipr
-*..smarttomcat
+.smarttomcat
+
 
 ### Eclipse ###
 .apt_generated
